Creepers can spawn progressively

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         Press SHIFT to walk slower<br>
         <strong>Debug Controls:</strong><br>
         F - Force creep to appear<br>
+        G - Force ALL creepers to appear<br>
+        H - List all active creepers<br>
         L - List available animations<br>
         1-6 - Test specific animations<br>
         (Check console for animation info)
