Creepers and screams

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         F - Force creep to appear<br>
         G - Force ALL creepers to appear<br>
         H - List all active creepers<br>
+        X - Test scream sounds<br>
         L - List available animations<br>
         1-6 - Test specific animations<br>
         (Check console for animation info)
