heartbeat and breath

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         G - Force ALL creepers to appear<br>
         H - List all active creepers<br>
         X - Test scream sounds<br>
+        B - Show heartbeat status<br>
         L - List available animations<br>
         1-6 - Test specific animations<br>
         (Check console for animation info)
