--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         X - Test scream sounds<br>
         B - Show heartbeat status<br>
         L - List available animations<br>
+        M - Test minimap lightning reveal<br>
+        N - Test minimap orientation<br>
         1-6 - Test specific animations<br>
         (Check console for animation info)
     </div>
