Hiding, sprinting, monsters, etc

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 <body>
     <div id="loader">Loading Forest...</div>
     <div id="info" style="display: none;">
+        <strong>🎯 OBJECTIVE:</strong> Reach the yellow marker to survive!<br><br>
         Use WASD to move, Mouse to look around<br>
         Press SHIFT to walk slower<br>
         <strong>Debug Controls:</strong><br>
