Restructure project into src and public folders

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,6 @@
     </div>
     <div id="timer">0:00</div>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="../src/main.js"></script>
 </body>
 </html>
